src/objects/Settlement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number_Customer_Bank__c</fullName>
        <description>Account Number for the Customer Bank for Customer Refund</description>
        <label>Account Number Customer Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <description>B&amp;Q: Additional Email field for Settlement Emails</description>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CO_Name__c</fullName>
        <description>Feb 2014 ConsNACC: Name to appear on shipping for Goodwill Settlements</description>
        <inlineHelpText>Enter the name of the person to receive the shipment.</inlineHelpText>
        <label>C/O Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Email__c</fullName>
        <description>Email for the case contact associated to the settlement</description>
        <label>Case Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Settlements</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case_Name__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Pickup_EU_Formatted__c</fullName>
        <description>Field to reformat the consumer pickup plus and hour date/time field into EU date format.</description>
        <formula>MID(TEXT(Consumer_Pickup_Plus_an_Hour__c), 9, 2)&amp;&quot;/&quot;&amp; MID(TEXT(Consumer_Pickup_Plus_an_Hour__c), 6, 2)&amp;&quot;/&quot;&amp;LEFT( TEXT(Consumer_Pickup_Plus_an_Hour__c) , 4)&amp;&quot; &quot;&amp; MID(TEXT( Consumer_Pickup_Plus_an_Hour__c), 12, 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Pickup EU Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Pickup_Plus_an_Hour__c</fullName>
        <description>Used by FOC Settlement email templates.  Adds an hour to the Consumer Pickup time to account for GMT</description>
        <formula>Consumer_Pickup__c +1/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Pickup Plus an Hour</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consumer_Pickup__c</fullName>
        <description>B/Q Date and Time Consumer will come and pick up the Free of Charge Goods</description>
        <label>Consumer Pickup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Case_Name__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Address__c</fullName>
        <formula>Case_Name__r.Contact.MailingStreet &amp; BR() &amp; Case_Name__r.Contact.MailingCity &amp; &quot;, &quot; &amp; Case_Name__r.Contact.MailingState &amp; &quot; &quot; &amp; Case_Name__r.Contact.MailingPostalCode &amp; BR() &amp; Case_Name__r.Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Case_Name__r.Contact.FirstName &amp; &quot; &quot; &amp; Case_Name__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Case_Name__r.Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Physical_Address__c</fullName>
        <formula>Case_Name__r.Contact.OtherStreet &amp; BR() &amp; Case_Name__r.Contact.OtherCity &amp; &quot;, &quot; &amp; Case_Name__r.Contact.OtherState &amp; &quot; &quot; &amp; Case_Name__r.Contact.OtherPostalCode &amp; BR() &amp; Case_Name__r.Contact.OtherCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Site_Address__c</fullName>
        <formula>Case_Name__r.Contact.Site_Address_Street__c &amp; BR() &amp; Case_Name__r.Contact.Site_Address_City__c  &amp; &quot;,  &quot; &amp; Case_Name__r.Contact.Site_Address_State__c &amp; &quot; &quot;  &amp;  Case_Name__r.Contact.Site_Address_Zip_Code__c  &amp; BR() &amp; Case_Name__r.Contact.Site_Address_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_User__c</fullName>
        <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy$User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <description>B/Q - Credit Note Number</description>
        <label>Credit Note Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Name__c</fullName>
        <description>B&amp;Q: Customer Bank&apos;s Name for Customer Refunds</description>
        <label>Customer Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settlements (Distributor)</relationshipLabel>
        <relationshipName>Settlements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Customer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B&amp;Q:  Prevents Customer Communication Email from being sent when Settlement Closes via WFs</description>
        <inlineHelpText>Customer Communication Email will NOT be sent when Settlement is closed.</inlineHelpText>
        <label>Do Not Send Customer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_L_Account__c</fullName>
        <label>G/L Account</label>
        <picklist>
            <picklistValues>
                <fullName>0001 2109 0000 0000 5005950 5200 000  Mills Fleet Farm, Blains Farm &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2110 0000 0000 5005950 5200 000  Wal-Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2111 0000 0000 5005950 5200 000   United Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2113 0000 0000 5005950 5200 000   Do It Best Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2228 0000 0000 5005950 5200 000   Orgill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2400 0000 0000 5005950 5200 000   Other Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2450 0000 0000 5005950 5200 000   Factory Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2604 0000 0000 5005950 5200 000   Lowes Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2605 0000 0000 5005950 5200 000   Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2650 0000 0000 5005950 5200 000   Tractor Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2665 0000 0000 5005950 5200 000   Home Depot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2672 0000 0000 5005950 5200 000   Independent Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001 2200 0000 0000 5005950 5200 000     Menard&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0006-2305-0000-0000-5005500-5200-000 B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001-2211-0000-0000-5005950-5200-000 ACE Valspar Branded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001-2213-0000-0000-5005950-5200-000 ACE Private Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001-2116-0000-0000-5005950-5200-000 Paint Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0006-2036-0000-6800-7000295-6800-000 Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0001-2672-0000-0000-5005100-5200-000 Costco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBAN_Number_Customer_Bank__c</fullName>
        <description>Customer Bank IBAN Number for Customer Refund Settlements</description>
        <label>IBAN Number Customer Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Colour2__c</fullName>
        <description>B&amp;Q: Item Colou2r for FOC goods</description>
        <label>Item Colour2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Colour3__c</fullName>
        <description>B&amp;Q: Item Colour3 for FOC goods</description>
        <label>Item Colour3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Colour4__c</fullName>
        <description>B&amp;Q: Item Colour4 for FOC goods</description>
        <label>Item Colour4</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_2__c</fullName>
        <label>Item Number 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_3__c</fullName>
        <label>Item Number 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_4__c</fullName>
        <label>Item Number 4</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_Description2__c</fullName>
        <description>B&amp;Q: Item Number Description2 to hand type by CSR for emails on FOC Settlements</description>
        <label>Item Number Description2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_Description3__c</fullName>
        <description>B&amp;Q: Item Number Description3 to hand type by CSR for emails on FOC Settlements</description>
        <label>Item Number Description3</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_Description4__c</fullName>
        <description>B&amp;Q: Item Number Description4 to hand type by CSR for emails on FOC Settlements</description>
        <label>Item Number Description4</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Clerk_Name__c</fullName>
        <description>The name of the Lowe&apos;s clerk to whom the agent has spoken</description>
        <label>Lowe&apos;s Clerk Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowe_s_TM_Email__c</fullName>
        <label>Lowe&apos;s TM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lowes_TM_Email__c</fullName>
        <formula>Store_Purchased__r.Territory_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowe&apos;s TM Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowes_TM_Name__c</fullName>
        <formula>Store_Purchased__r.Territory_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowe&apos;s TM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>Case_Name__r.Contact.MailingStreet &amp; BR() &amp;  Case_Name__r.Contact.MailingCity &amp; &quot;, &quot; &amp; Case_Name__r.Contact.MailingState
 &amp; &quot; &quot; &amp;  Case_Name__r.Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_Agent_to_Order_Dept__c</fullName>
        <description>Feb 2014 ConsNACC: Designates the notes for the Order Department from Agents - these are not to be shown to customers or put on the order</description>
        <label>Notes from Agent to Order Dept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_be_Placed_on_Order__c</fullName>
        <description>Feb 2014 ConsNACC: Added to clarify these are the notes that should show up on the Order</description>
        <label>Notes to be Placed on Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Vouchers__c</fullName>
        <description>B&amp;Q: Number of Vouchers sent on a Valspar Voucher Settlement Type</description>
        <label>Number of Vouchers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Detail_Gallons__c</fullName>
        <label>Offer Detail Gallons</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Detail__c</fullName>
        <label>Offer Detail $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_To__c</fullName>
        <label>Payable To:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <label>Quantity 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <label>Quantity 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_4__c</fullName>
        <label>Quantity 4</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA__c</fullName>
        <formula>&quot;CC&quot; &amp;   Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Claim Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container Failure/Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Destroy Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margin Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Failure/Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo/Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show/Store Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By:</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retailer_Reference_Comments__c</fullName>
        <label>Retailer Reference Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retailer_Ship_to_Address__c</fullName>
        <formula>Retailer__r.ShippingStreet &amp; BR() &amp;  Retailer__r.ShippingCity &amp; &quot;, &quot; &amp;  Retailer__r.ShippingState &amp; &quot; &quot; &amp; Retailer__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Ship-to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settlements (Retailer)</relationshipLabel>
        <relationshipName>Settlements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Ship_to_Address__c</fullName>
        <label>Select Ship-to Address</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Physical Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Site Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Purchased Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes from Agent to Order Dept.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_By__c</fullName>
        <label>Send By:</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx 2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Royal Mail Special Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Settlement_Date_EU_Formatted__c</fullName>
        <description>Field to reformat the date into EU date format.  Note the date will be as of GMT</description>
        <formula>MID(TEXT(Settlement_Date__c), 9, 2)&amp;&quot;/&quot;&amp; MID(TEXT(Settlement_Date__c), 6, 2)&amp;&quot;/&quot;&amp;LEFT( TEXT(Settlement_Date__c) , 4)&amp;&quot; GMT&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Date EU Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Date__c</fullName>
        <label>Settlement Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Status__c</fullName>
        <label>Settlement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Customer Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Settlement Internal Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Funds Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Dept Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witney Office Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on VAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CSA Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Finance Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Offer Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Settlement_Type__c</fullName>
        <label>Settlement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowe&apos;s RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC - Free of Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <description>Feb 2014 kstendahl for ConsNACC: Update formula to pull in the Store Purchased Address when Store Purchased Address is selected in the &apos;Select Ship-To Address&quot; field.</description>
        <formula>CASE(Select_Ship_to_Address__c ,
&quot;Contact Mailing Address&quot;,
 Contact_Mailing_Address__c,
&quot;Contact Physical Address&quot;,
Contact_Physical_Address__c,
&quot;Contact Site Address&quot;,
 Contact_Site_Address__c,
&quot;Store Purchased Address&quot;,
Store_Purchased_Address__c,
&quot;Ship-to Address Not Selected&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number__c</fullName>
        <externalId>true</externalId>
        <label>Ship-To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_or_Swift_Code__c</fullName>
        <description>Customer Bank Sort or Swift Code for Customer Refund Settlement</description>
        <label>Sort or Swift Code Customer Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Contact_Name__c</fullName>
        <description>B/Q Free form to add a Name for a Contact at the B/Q Store</description>
        <inlineHelpText>Name of Contact at B/Q Store</inlineHelpText>
        <label>Store Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Account_Owner_Email__c</fullName>
        <description>Store Purchased Account Owner&apos;s email.</description>
        <label>Store Purchased Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Account_Owner__c</fullName>
        <formula>Store_Purchased__r.Owner.FirstName &amp;  &quot; &quot; &amp; Store_Purchased__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Purchased Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Address__c</fullName>
        <description>Feb 2014 Kstendahl for ConsNACC - formula to pull in address of the Store Purchased selected on the Settlement</description>
        <formula>Store_Purchased__r.Name &amp; BR() &amp; Store_Purchased__r.BillingStreet &amp; BR() &amp; Store_Purchased__r.BillingCity &amp; &quot;, &quot; &amp; Store_Purchased__r.BillingState &amp; &quot; &quot; &amp;  Store_Purchased__r.BillingPostalCode &amp; BR() &amp;  Store_Purchased__r.BillingCountry &amp; BR() &amp;  Store_Purchased__r.ShippingStreet &amp; BR() &amp;  Store_Purchased__r.ShippingCity  &amp; &quot;, &quot; &amp;  Store_Purchased__r.ShippingState &amp; &quot; &quot; &amp;  Store_Purchased__r.ShippingPostalCode &amp; BR() &amp;  Store_Purchased__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Purchased Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Contact_Email__c</fullName>
        <formula>Store_Purchased_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Purchased Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Contact_Phone__c</fullName>
        <formula>Store_Purchased_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Purchased Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchased_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Purchased Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Store_Purchased__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Settlements Contact</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Purchased__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Purchased</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settlements</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tinting_Information__c</fullName>
        <label>Tinting Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Ext__c</fullName>
        <label>Total Ext. $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>B&amp;Q:  Tracking Number for Mail</description>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>03 substandard Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 Policy Allowance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B&amp;Q: For FOC Settlements.  When checked, Settlement will close and WFs will go out</description>
        <inlineHelpText>VAC Update only: Will Close the Settlement and send emails</inlineHelpText>
        <label>VAC Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAC_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B&amp;Q: Changes status back to CSA to complete the Settlement</description>
        <inlineHelpText>VAC Update Only: Returns the Settlement to the CSA to process</inlineHelpText>
        <label>VAC Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valspar_Entity__c</fullName>
        <description>B/Q for Settlement Type Customer Refund - Valspar Entity requesting Refund</description>
        <label>Valspar Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Valspar Consumer UK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Plastikote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voucher_Type__c</fullName>
        <description>Incident 333323 - Voucher Type for EU Contact Center</description>
        <label>Voucher Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tester pot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium W&amp;C 5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium W&amp;M 2.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard K&amp;B 2.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Trim 2.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood Varnish 1L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tintable Primer 2.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Masonry 5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard W&amp;C 10L</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Settlement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Settlement_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Settlement_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Offer_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Settlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <recordTypes>
        <fullName>Billing_Adjustment</fullName>
        <active>true</active>
        <label>Billing Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Check_Request</fullName>
        <active>true</active>
        <label>Check Request</label>
    </recordTypes>
</CustomObject>